Renamed Renderable as part of a large refactoring

--- a/gameengine/gameengine.vcxproj
+++ b/gameengine/gameengine.vcxproj
@@ -200,14 +200,14 @@
     <ClInclude Include="src\render\controllers\ShadowController.h" />
     <ClInclude Include="src\render\controllers\SkyboxController.h" />
     <ClInclude Include="src\render\CumulativeTexture.h" />
-    <ClInclude Include="src\render\EngineCanvas.h" />
     <ClInclude Include="src\render\LoadedTexture.h" />
-    <ClInclude Include="src\render\Renderable.h" />
     <ClInclude Include="src\render\controllers\RenderController.h" />
-    <ClInclude Include="src\render\RenderableConfig.h" />
-    <ClInclude Include="src\render\RenderMode.h" />
-    <ClInclude Include="src\render\RenderTexture.h" />
-    <ClInclude Include="src\render\RenderTextureData.h" />
+    <ClInclude Include="src\render\rendertarget\EngineCanvas.h" />
+    <ClInclude Include="src\render\rendertarget\RenderTarget.h" />
+    <ClInclude Include="src\render\rendertarget\RenderTargetConfig.h" />
+    <ClInclude Include="src\render\rendertarget\RenderTargetMode.h" />
+    <ClInclude Include="src\render\rendertarget\RenderTexture.h" />
+    <ClInclude Include="src\render\rendertarget\RenderTextureData.h" />
     <ClInclude Include="src\render\ShaderProgram.h" />
     <ClInclude Include="src\Resource.h" />
     <ClInclude Include="src\scene\Camera.h" />
@@ -254,10 +254,11 @@
     <ClCompile Include="src\render\controllers\ShadowController.cpp" />
     <ClCompile Include="src\render\controllers\SkyboxController.cpp" />
     <ClCompile Include="src\render\CumulativeTexture.cpp" />
-    <ClCompile Include="src\render\EngineCanvas.cpp" />
-    <ClCompile Include="src\render\Renderable.cpp" />
-    <ClCompile Include="src\render\RenderTexture.cpp" />
-    <ClCompile Include="src\render\RenderTextureData.cpp" />
+    <ClCompile Include="src\render\rendertarget\EngineCanvas.cpp" />
+    <ClCompile Include="src\render\rendertarget\RenderTarget.cpp" />
+    <ClCompile Include="src\render\rendertarget\RenderTargetMode.cpp" />
+    <ClCompile Include="src\render\rendertarget\RenderTexture.cpp" />
+    <ClCompile Include="src\render\rendertarget\RenderTextureData.cpp" />
     <ClCompile Include="src\render\ShaderProgram.cpp" />
     <ClCompile Include="src\Resource.cpp" />
     <ClCompile Include="src\scene\Camera.cpp" />
