--- a/gameengine/gameengine.vcxproj.filters
+++ b/gameengine/gameengine.vcxproj.filters
@@ -76,11 +76,20 @@
     <Filter Include="Resource Files\shaders\model\normal">
       <UniqueIdentifier>{1bd67220-ce7f-4584-8cf1-18b2bcdfa1a9}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\render\renderable">
+      <UniqueIdentifier>{5d9a2569-9432-42ff-846e-4114c203735e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\render\rendertarget">
+      <UniqueIdentifier>{21e18304-d079-4bb3-b33f-4b955cffd682}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\render\renderable">
+      <UniqueIdentifier>{aee1afc4-e0d7-4a7b-a59c-2f40b0d89dc1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\render\rendertarget">
+      <UniqueIdentifier>{712c77fe-f34a-4dce-ad36-4a5c54b4b3bb}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\render\EngineCanvas.h">
-      <Filter>Header Files\render</Filter>
-    </ClInclude>
     <ClInclude Include="src\Engine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -135,17 +144,11 @@
     <ClInclude Include="src\scene\SceneApproximation.h">
       <Filter>Header Files\scene</Filter>
     </ClInclude>
-    <ClInclude Include="src\render\Renderable.h">
-      <Filter>Header Files\render</Filter>
-    </ClInclude>
     <ClInclude Include="src\Resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="resource.h">
       <Filter>Resource Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\render\RenderTexture.h">
-      <Filter>Header Files\render</Filter>
     </ClInclude>
     <ClInclude Include="src\scene\Referenceable.h">
       <Filter>Header Files\scene</Filter>
@@ -174,16 +177,7 @@
     <ClInclude Include="src\loaders\SceneLoader.h">
       <Filter>Header Files\loaders</Filter>
     </ClInclude>
-    <ClInclude Include="src\render\RenderMode.h">
-      <Filter>Header Files\render</Filter>
-    </ClInclude>
-    <ClInclude Include="src\render\RenderTextureData.h">
-      <Filter>Header Files\render</Filter>
-    </ClInclude>
     <ClInclude Include="src\render\LoadedTexture.h">
-      <Filter>Header Files\render</Filter>
-    </ClInclude>
-    <ClInclude Include="src\render\RenderableConfig.h">
       <Filter>Header Files\render</Filter>
     </ClInclude>
     <ClInclude Include="src\render\CumulativeTexture.h">
@@ -234,11 +228,26 @@
     <ClInclude Include="src\LogMessage.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\render\rendertarget\RenderTarget.h">
+      <Filter>Header Files\render\rendertarget</Filter>
+    </ClInclude>
+    <ClInclude Include="src\render\rendertarget\EngineCanvas.h">
+      <Filter>Header Files\render\rendertarget</Filter>
+    </ClInclude>
+    <ClInclude Include="src\render\rendertarget\RenderTexture.h">
+      <Filter>Header Files\render\rendertarget</Filter>
+    </ClInclude>
+    <ClInclude Include="src\render\rendertarget\RenderTargetConfig.h">
+      <Filter>Header Files\render\rendertarget</Filter>
+    </ClInclude>
+    <ClInclude Include="src\render\rendertarget\RenderTargetMode.h">
+      <Filter>Header Files\render\rendertarget</Filter>
+    </ClInclude>
+    <ClInclude Include="src\render\rendertarget\RenderTextureData.h">
+      <Filter>Header Files\render\rendertarget</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\render\EngineCanvas.cpp">
-      <Filter>Source Files\render</Filter>
-    </ClCompile>
     <ClCompile Include="src\Engine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -293,14 +302,8 @@
     <ClCompile Include="src\scene\SceneApproximation.cpp">
       <Filter>Source Files\scene</Filter>
     </ClCompile>
-    <ClCompile Include="src\render\Renderable.cpp">
-      <Filter>Source Files\render</Filter>
-    </ClCompile>
     <ClCompile Include="src\Resource.cpp">
       <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\render\RenderTexture.cpp">
-      <Filter>Source Files\render</Filter>
     </ClCompile>
     <ClCompile Include="src\scene\Referenceable.cpp">
       <Filter>Source Files\scene</Filter>
@@ -330,9 +333,6 @@
       <Filter>Source Files\loaders</Filter>
     </ClCompile>
     <ClCompile Include="src\render\CumulativeTexture.cpp">
-      <Filter>Source Files\render</Filter>
-    </ClCompile>
-    <ClCompile Include="src\render\RenderTextureData.cpp">
       <Filter>Source Files\render</Filter>
     </ClCompile>
     <ClCompile Include="src\render\controllers\CubemapController.cpp">
@@ -379,6 +379,21 @@
     </ClCompile>
     <ClCompile Include="src\LogMessage.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\render\rendertarget\RenderTarget.cpp">
+      <Filter>Source Files\render\rendertarget</Filter>
+    </ClCompile>
+    <ClCompile Include="src\render\rendertarget\EngineCanvas.cpp">
+      <Filter>Source Files\render\rendertarget</Filter>
+    </ClCompile>
+    <ClCompile Include="src\render\rendertarget\RenderTexture.cpp">
+      <Filter>Source Files\render\rendertarget</Filter>
+    </ClCompile>
+    <ClCompile Include="src\render\rendertarget\RenderTargetMode.cpp">
+      <Filter>Source Files\render\rendertarget</Filter>
+    </ClCompile>
+    <ClCompile Include="src\render\rendertarget\RenderTextureData.cpp">
+      <Filter>Source Files\render\rendertarget</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
