Added icosphere embedded model

--- a/demo-cube/resource.rc
+++ b/demo-cube/resource.rc
@@ -2,6 +2,7 @@
 
 #include <gameengine/resource.rc>
 #include <gameengine/shaders.rc>
+#include <gameengine/models.rc>
 
 ApplicationIcon ICON "main.ico"
 ICONPRG ICON "main.ico"
