--- a/gameengine/gameengine.vcxproj.filters
+++ b/gameengine/gameengine.vcxproj.filters
@@ -525,5 +525,8 @@
     <None Include="resources\models\icosphere.ply">
       <Filter>Resource Files\models</Filter>
     </None>
+    <None Include="resources\shaders\model\normal\pass1.geom">
+      <Filter>Resource Files\shaders\model\normal</Filter>
+    </None>
   </ItemGroup>
 </Project>
