--- a/gameengine/gameengine.vcxproj.filters
+++ b/gameengine/gameengine.vcxproj.filters
@@ -498,6 +498,8 @@
     <None Include="resources\shaders\model\normal\pass1.vert">
       <Filter>Resource Files\shaders\model\normal</Filter>
     </None>
-    <None Include="resources\models\icosphere.ply" />
+    <None Include="resources\models\icosphere.ply">
+      <Filter>Resource Files\models</Filter>
+    </None>
   </ItemGroup>
 </Project>
