Wrote depth only pass

--- a/gameengine/gameengine.vcxproj.filters
+++ b/gameengine/gameengine.vcxproj.filters
@@ -489,17 +489,14 @@
     <None Include="resources\shaders\model\wireframe.geom">
       <Filter>Resource Files\shaders\model</Filter>
     </None>
-    <None Include="resources\shaders\model\normal\pass0.frag">
-      <Filter>Resource Files\shaders\model\normal</Filter>
-    </None>
-    <None Include="resources\shaders\model\normal\pass1.frag">
-      <Filter>Resource Files\shaders\model\normal</Filter>
-    </None>
-    <None Include="resources\shaders\model\normal\pass1.vert">
-      <Filter>Resource Files\shaders\model\normal</Filter>
-    </None>
     <None Include="resources\models\icosphere.ply">
       <Filter>Resource Files\models</Filter>
+    </None>
+    <None Include="resources\shaders\model\normal\depthonly.frag">
+      <Filter>Resource Files\shaders\model\normal</Filter>
+    </None>
+    <None Include="resources\shaders\model\normal\draw.frag">
+      <Filter>Resource Files\shaders\model\normal</Filter>
     </None>
   </ItemGroup>
 </Project>
