--- a/gameengine/gameengine.vcxproj
+++ b/gameengine/gameengine.vcxproj
@@ -311,9 +311,8 @@
     <None Include="resources\shaders\model\default.tesc" />
     <None Include="resources\shaders\model\default.tese" />
     <None Include="resources\shaders\model\default.vert" />
-    <None Include="resources\shaders\model\normal\pass0.frag" />
-    <None Include="resources\shaders\model\normal\pass1.frag" />
-    <None Include="resources\shaders\model\normal\pass1.vert" />
+    <None Include="resources\shaders\model\normal\depthonly.frag" />
+    <None Include="resources\shaders\model\normal\draw.frag" />
     <None Include="resources\shaders\model\shadow.frag" />
     <None Include="resources\shaders\model\textured.frag" />
     <None Include="resources\shaders\model\wireframe.frag" />
