--- a/gameengine/gameengine.vcxproj
+++ b/gameengine/gameengine.vcxproj
@@ -216,6 +216,7 @@
     <ClInclude Include="src\render\rendertarget\RenderTextureData.h" />
     <ClInclude Include="src\render\ShaderProgram.h" />
     <ClInclude Include="src\render\TargetType.h" />
+    <ClInclude Include="src\render\texture\Texture.h" />
     <ClInclude Include="src\render\texture\TextureFiltering.h" />
     <ClInclude Include="src\render\texture\TextureFormat.h" />
     <ClInclude Include="src\render\texture\TextureType.h" />
@@ -277,6 +278,7 @@
     <ClCompile Include="src\render\rendertarget\RenderTextureData.cpp" />
     <ClCompile Include="src\render\ShaderProgram.cpp" />
     <ClCompile Include="src\render\TargetType.cpp" />
+    <ClCompile Include="src\render\texture\Texture.cpp" />
     <ClCompile Include="src\render\texture\TextureFiltering.cpp" />
     <ClCompile Include="src\render\texture\TextureFormat.cpp" />
     <ClCompile Include="src\render\texture\TextureType.cpp" />
